<resources>
    <string name="app_name">MadLevel3Task1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Welcome">Welcome to the Games Rating App!</string>
    <string name="start_rating">Click START to start rating</string>
    <string name="start_btn">START</string>
    <string name="Rate_text">Rate the following game 1 to 5 stars</string>
    <string name="placeholder">Placeholder</string>
    <string name="to_summary_btn">To Summary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="start_over">Start Over</string>
</resources>